# fasp-clients

./: README.md  pyproject.toml  setup.py
src/fasp/examples/: test_bulk_drs.py
src/fasp/loc/: DRSClient.py  drs_metaresolver.py  resolver test.ipynb  resolver.py  sdl_drsclient.py
src/fasp/loc/data/: resolution_cache.json
src/fasp/search/: data_connect_client.py
