[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasp-clients"
version = "0.0.3"
authors = [
  { name="Ian Fore", email="ian.fore@nih.gov" },
]
description = "Clients for GA4GH Federated Analysis Systems Project"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ga4gh/fasp-clients"
"Bug Tracker" = "https://github.com/ga4gh/fasp-clients/issues"